[gd_scene load_steps=5 format=3 uid="uid://b8gpxmwm0fasc"]

[ext_resource type="Script" uid="uid://bkbvur85785bq" path="res://scripts/main_menu.gd" id="1_13qgu"]
[ext_resource type="FontFile" uid="uid://c8e0uior67hgl" path="res://assets/fonts/PixelOperator8.ttf" id="2_towmw"]
[ext_resource type="FontFile" uid="uid://4wxt0g33xdbi" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_lars7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.316167, 0.316167, 0.316167, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Node2D"]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://d1hwvomjwdrjv")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="Level" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuContainer" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_13qgu")

[node name="MenuPanel" type="Panel" parent="CanvasLayer/MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wu84c")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuContainer/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -240.0
offset_right = 340.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Username" type="LineEdit" parent="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
theme_override_fonts/font = ExtResource("2_towmw")
theme_override_font_sizes/font_size = 48
placeholder_text = "Username"
alignment = 1
max_length = 15

[node name="Host" type="Button" parent="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_towmw")
theme_override_font_sizes/font_size = 64
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_towmw")
theme_override_font_sizes/font_size = 64
text = "Join"

[node name="IPAddress" type="LineEdit" parent="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
theme_override_fonts/font = ExtResource("2_towmw")
theme_override_font_sizes/font_size = 48
placeholder_text = "127.0.0.1"
alignment = 1
max_length = 15

[node name="ConnectionStatus" type="Label" parent="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Connection Status: ..."

[node name="ConnectionPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 120.0

[node name="PlayerIDLabel" type="Label" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 100.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_lars7")
theme_override_font_sizes/font_size = 16
text = "HOST
PID: 123456789"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Disconnect" type="Button" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 48.0
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "X"

[node name="CCDown" type="Button" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 0
offset_left = 256.0
offset_right = 296.0
offset_bottom = 40.0
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "D"

[node name="CCUp" type="Button" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 0
offset_left = 205.0
offset_right = 245.0
offset_bottom = 40.0
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "U"

[connection signal="pressed" from="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer/Host" to="CanvasLayer/MenuContainer" method="host_game"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/MenuPanel/VBoxContainer/Join" to="CanvasLayer/MenuContainer" method="join_game"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/Disconnect" to="CanvasLayer/MenuContainer" method="disconnect_from_server"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/CCDown" to="CanvasLayer/MenuContainer" method="change_channel" binds= [-1]]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/CCUp" to="CanvasLayer/MenuContainer" method="change_channel" binds= [1]]
